--- a/css/reset.css
+++ b/css/reset.css
@@ -14,7 +14,22 @@ a{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat; 
-    height: 450px;   
+    height: 450px; 
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bg-main::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000a6;
 }
 
 .container {
