--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,13 @@
 }
 
 .texto{
-    padding-top: 100px;
+    z-index: 2;
 }
 
 .texto p{
     padding: 1rem 0;
 }
+
 
 .read-more a{
     padding: 1rem 2rem;
